# Fsiv

./: CMakeLists.txt  seglib.cpp  vsegbase.cpp
Assigment1/: CMakeLists.txt  README.txt  main.cpp
Assigment2/: CMakeLists.txt  main.cpp
Assigment3/: CMakeLists.txt  main.cpp
Assigment4/: CMakeLists.txt  aaa.cpp  main.cpp
Assigment5/: CMakeLists.txt  OnlyKernel.cpp  main.cpp
Assigment5/resources/: exampletxt
Assigment6/: CMakeLists.txt  greyscale.cpp  main.cpp
Assigment7/: CMakeLists.txt  main.cpp
Assigment8/: CMakeLists.txt  aug.cpp  calibration.cpp  imagelist_creator.cpp  main.cpp
